--- a/CVD_prevented/Report_CVD.Rmd
+++ b/CVD_prevented/Report_CVD.Rmd
@@ -18,76 +18,35 @@ library(knitr)
 library(xtable)
 library(darthtools)
 library(ggplot2)
+library(readr)
+source("../function/transform_func.R")
 ```
-
-
-# Results from the paper
-
-These two tables are from the result part of the paper by Yaqin Si.
-```{r message=FALSE}
-strategy_names <- c("strategy1", "strategy2", "strategy3")
-# QALY
-QALY <- data.frame("est" = c(498,691,654),
-                   "LB" = c(103,233,105),
-                   "UB" = c(894,194,1108))
-rownames(QALY) <- strategy_names
-# Prevent CVD events
-num_CVD <- data.frame("est" = c(298,374,346),
-                   "LB" = c(155,181,154),
-                   "UB" = c(441,567,538))
-rownames(num_CVD) <- strategy_names
-```
-
-```{r, echo=FALSE, results='asis'}
-t1 <- kable(QALY, format = "latex", booktabs = TRUE)
-t2 <- kable(num_CVD, format = "latex", booktabs = TRUE)
-cat(c("\\begin{table}[!htb]
-    \\begin{minipage}{.5\\linewidth}
-      \\caption{Increased QALY with no screening}
-      \\centering",
-        t1,
-    "\\end{minipage}%
-    \\begin{minipage}{.5\\linewidth}
-      \\centering
-        \\caption{Prevent CVD events}",
-        t2,
-    "\\end{minipage} 
-\\end{table}"
-))  
-```
-
-\newpage
 # Data and parameters
 ```{r, results='asis', message=FALSE}
-library(readr)
 rate_data <- read_csv("../data/ghdx_data.csv")
 print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
       caption = "Data from Global Health Data Exchange"),
-      caption.placement="top")
+      caption.placement="top",comment=FALSE)
 ```
 
 ```{r, results='asis', message=FALSE}
-library(readr)
 noStrategy_data <- read_csv("../data/Normal_data.csv")
 print(xtable(data.frame(noStrategy_data),digits=c(0,0,0,0),
       caption = "Distribution of the population"),
-      caption.placement="top")
+      caption.placement="top",comment=FALSE)
 ```
 
 ```{r, results='asis', message=FALSE}
-population_data <- readr::read_csv("../data/Normal3Stra_data.csv")
+population_data <- read_csv("../data/Normal3Stra_data.csv")
 population_data <- data.frame(population_data)
 print(xtable(data.frame(population_data),digits=c(0,0,0,0,0,0,0),
-      caption = "Distribution of the population under different strategies"),caption.placement="top")
+      caption = "Distribution of the population under different strategies"),caption.placement="top",comment=FALSE)
 ```
 
 \clearpage
 ```{r}
-## General setup
-source("../function/transform_func.R")
 n_t <- 10   # time horizon, number of cycles
-# S1: live; S2: cvd; S3: cvdth; S4: oth_death
-v_names_states <- c("S1", "S2", "S3", "S4")  
+v_names_states <- c("S1", "S2", "S3", "S4") # S1: live; S2: cvd; S3: cvdth; S4: oth_death 
 n_states    <- length(v_names_states)   # number of health states 
 v_names_str <- c("Strategy0","Strategy1", "Strategy2", "Strategy3") # store the strategy names
 n_str       <- length(v_names_str)      # number of strategies
@@ -113,14 +72,10 @@ p_ccvd_cvdth <- rate_to_prob(rate_data$death_CVD*HR_cvdhistory_cvdth,t=1)
 set.seed(100)
 p_acvd_cvdth <- rep(runif(1,min=0.02,max=0.1),length=length(p_live_cvd))
 
-# half-cycle correction
-# corr_matrix <- matrix(1,nrow = 11,ncol = 4)
-# corr_matrix[1,] <- rep(0.5,4)
-# corr_matrix[11,] <- rep(0.5,4)
-# corr_matrix
+# half-cycle correction could be added
 ```
 
-### Component 1: A transition probability matrix $P_t$
+# A transition probability matrix $P_t$
 \begin{center}
 \includegraphics[width=8in]{TreeAge.jpg}
 \end{center}
@@ -151,91 +106,543 @@ $P6= 1-(p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth)-p\_live\_oth\_death$
 
 $P5= p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth$
 
-# Strategy 0 (a male 40-45)
+# Strategy 0
 
-In what follows, an example for the groups of male patients, aging from 40 to 45 is illustrated.
 ```{r}
 ###################### Construct state-transition models for Strategy1 #####################
-#### Create transition arrays ####
-a_P <- array(0, dim      = c(n_states, n_states, 10),
-                dimnames = list(v_names_states, v_names_states, 1:10))
-## From S1, S2, S3, S4
-a_P["S1", "S1", 1:5]   <- 1-(p_live_cvd[1]*(1-p_acvd_cvdth[1]) +
-                               p_live_cvdth[1]*p_live_cvd[1]*p_acvd_cvdth[1] +
-                               p_live_oth_death[1])
-a_P["S1", "S2", 1:5]  <- p_live_cvd[1]*(1-p_acvd_cvdth[1])
-a_P["S1", "S3", 1:5]   <- p_live_cvdth[1]*p_live_cvd[1]*p_acvd_cvdth[1]
-a_P["S1", "S4", 1:5]   <- p_live_oth_death[1]
-a_P["S2", "S1", 1:5] <- 0
-a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[1]-
-  (p_ccvd_cvdth[1]+p_ccvd_acvd[1]*p_acvd_cvdth[1])
-a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[1]+
-  p_ccvd_acvd[1]*p_acvd_cvdth[1]
-a_P["S2", "S4", 1:5] <- p_live_oth_death[1]
-a_P["S3", "S3", 1:5] <- 1
-a_P["S4", "S4", 1:5] <- 1
-
-## From S1, S2, S3, S4
-a_P["S1", "S1", 6:10] <-  1-(p_live_cvd[1+1]*(1-p_acvd_cvdth[1+1])+
-                               p_live_cvdth[1+1]*p_live_cvd[1+1]*p_acvd_cvdth[1+1] +
-                               p_live_oth_death[1+1])
-a_P["S1", "S2", 6:10]  <- p_live_cvd[1+1]*(1-p_acvd_cvdth[1+1])
-a_P["S1", "S3", 6:10]  <- p_live_cvdth[1+1]*p_live_cvd[1+1]*p_acvd_cvdth[1+1]
-a_P["S1", "S4", 6:10]  <- p_live_oth_death[1+1]
-a_P["S2", "S1", 6:10] <- 0
-a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[1+1]-
-  (p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1])
-a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1]
-a_P["S2", "S4", 6:10] <-  p_live_oth_death[1+1]
-a_P["S3", "S3", 6:10] <- 1
-a_P["S4", "S4", 6:10] <- 1
-# is the constructed transition matrix in 10 cycles
-# depends on the specific population (age and gender)
-a_P  
-```
-
-### Component 2: The  cohort trace matrix $M$
-```{r fig.cap="For the group male aging from 40-45",fig.height=3.5}
-## Initial state vector: All starting healthy
-v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
-## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
-              dimnames = list(0:(n_t), v_names_states))
-m_M[1, ] <- v_s_init
-for(t in 1:10){
-  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
-}
-m_M
-```
-\textcolor{red}{This matrix is the trace matrix of the specific population (male, 40-45) during these 10 cycles. The whole cohort starts in $S1$ state and transitions to the rest of the states over time.}
-
-```{r}
-
-CVD_per_person <- sum(m_M[,1]* p_live_cvd[1])
-CVD_per_person
-
-# calculation of the per CVD prevented events
-CVD_prevented <- matrix(NA,nrow=14,ncol=1)
+patient_group_name <- c("m40","m45","m50","m55","m60","m65","m70",
+                        "f40","f45","f50","f55","f60","f65","f70")
+result_m_M <- array(0, dim = c(10, 4, 14),
+               dimnames = list(paste0("t",0:9), v_names_states, patient_group_name))
 
 for(i in 1:14){
-  CVD_prevented[i] <- sum(m_M[,1]*p_live_cvd[i])
+  if(i != 7 && i != 14){
+    a_P <- array(0, dim = c(n_states, n_states, 10),
+               dimnames = list(v_names_states, v_names_states, 1:10))
+    a_P["S1", "S1", 1:5] <- 1-(p_live_cvd[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+    a_P["S1", "S2", 1:5] <- p_live_cvd[i]*(1-p_acvd_cvdth[i])
+    a_P["S1", "S3", 1:5] <- p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i]
+    a_P["S1", "S4", 1:5] <- p_live_oth_death[i]
+    a_P["S2", "S1", 1:5] <- 0
+    a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+      (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+    a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+      p_ccvd_acvd[i]*p_acvd_cvdth[i]
+    a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+    a_P["S3", "S3", 1:5] <- 1
+    a_P["S4", "S4", 1:5] <- 1
+
+    a_P["S1", "S1", 6:10] <-  1-(p_live_cvd[i+1]*(1-p_acvd_cvdth[i+1])+
+                             p_live_cvdth[i+1]*p_live_cvd[i+1]*p_acvd_cvdth[i+1]
+                             +p_live_oth_death[i+1])
+    a_P["S1", "S2", 6:10] <- p_live_cvd[i+1]*(1-p_acvd_cvdth[i+1])
+    a_P["S1", "S3", 6:10] <- p_live_cvdth[i+1]*p_live_cvd[i+1]*p_acvd_cvdth[i+1]
+    a_P["S1", "S4", 6:10] <- p_live_oth_death[i+1]
+    a_P["S2", "S1", 6:10] <- 0
+    a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+       (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+    a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+    a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+    a_P["S3", "S3", 6:10] <- 1
+    a_P["S4", "S4", 6:10] <- 1
+  
+    v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+    m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+                  dimnames = list(0:(n_t-1), v_names_states))
+    m_M[1, ] <- v_s_init
+    for(t in 1:9){
+      m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+    }
+    result_m_M[,,i] <- m_M
+  }
+    if(i == 7 | i == 14){
+    a_P <- array(0, dim = c(n_states, n_states, 10),
+               dimnames = list(v_names_states, v_names_states, 1:10))
+    a_P["S1", "S1", 1:10] <- 1-(p_live_cvd[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+    a_P["S1", "S2", 1:10] <- p_live_cvd[i]*(1-p_acvd_cvdth[i])
+    a_P["S1", "S3", 1:10] <- p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i]
+    a_P["S1", "S4", 1:10] <- p_live_oth_death[i]
+    a_P["S2", "S1", 1:10] <- 0
+    a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[i]-
+      (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+    a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[i]+
+      p_ccvd_acvd[i]*p_acvd_cvdth[i]
+    a_P["S2", "S4", 1:10] <- p_live_oth_death[i]
+    a_P["S3", "S3", 1:10] <- 1
+    a_P["S4", "S4", 1:10] <- 1
+    
+    v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+    m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+                  dimnames = list(0:(n_t-1), v_names_states))
+    m_M[1, ] <- v_s_init
+    for(t in 1:9){
+      m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+    }
+    result_m_M[,,i] <- m_M
+  }
 }
-CVD_prevented
-# we need to consider the following group of patients aged 40-45 if we use strategy3
-strategy3_noscren_CVD <- matrix(CVD_prevented[c(1,2,8,9)],ncol=2,nrow=2)
-colnames(strategy3_noscren_CVD) <- c("male","female")
-rownames(strategy3_noscren_CVD) <- c("40","45")
-strategy3_noscren_CVD
+result_m_M[ , ,1] # an example for the patient group 40-45, male
+```
+
+```{r results="asis"}
+prob_group0 <- matrix(0, ncol=14, nrow=10,
+                     dimnames=list(paste0("t",0:9),patient_group_name))
+for (i in 1:14){
+  prob_group0[,i] <- result_m_M[, 1, i]* p_live_cvd[i]
+}
+patient_group <- matrix(noStrategy_data$num,ncol=1,dimnames=list(patient_group_name))
+result_CVD <- matrix(0,ncol = 1, nrow = 14,
+                     dimnames=list(patient_group_name,""))
+for(i in 1:14){
+  result_CVD[i] <- sum(prob_group0[,i]*patient_group[i])
+} 
+result_CVD_stg0 <- sum(result_CVD)
+print(xtable(data.frame(rbind(result_CVD,"sum" = result_CVD_stg0)),
+      caption = "CVD events for patients under Strategy0"),
+      caption.placement="top",comment=FALSE)
+
 ```
 
 ```{r}
-result_strategy0 <- matrix(NA,nrow=1,ncol=1)
-colnames(result_strategy0) <- c("strategy0")
+HR_l_stg1	<- 0.63
+HR_m_stg1	<- 1.56
+HR_h_stg1	<- 1.6
 
-result_strategy0 <- sum(noStrategy_data$num * as.numeric(CVD_prevented))
-result_strategy0
+HR_l_stg2	<- 0.43
+HR_m_stg2	<- 0.97
+HR_h_stg2	<- 2.06
+
+HR_l_stg3	<- 0.45
+HR_m_stg3	<- 1.09
+HR_h_stg3	<- 2.11
+# lifestyle intervention for medium risk and above
+HR_smk_cvd	<-	0.85
+HR_smk_cvdth	<-	0.72
+HR_salt_cvd	<-	0.81
+HR_salt_cvdth	<-	0.66
+HR_wtc_cvd	<-	0.93
+HR_wtc_dth	<-	0.93
+# treatment intervention for high risk (additional)
+HR_hpt_lip_cvd	<-	0.7
+HR_hpt_lip_cvdth <-	0.82
+```
+\begin{center}
+\begin{table}
+\caption{Incidence rate}
+\begin{tabular}{cccc} 
+\hline
+Item & & CVD incidence(HR) & CVD cause-specific mortality (HR)  \\
+\hline
+\multirow{3}{6em}{Strategy 1}& {Low risk} & `r HR_l_stg1` & 1   \\
+& {Medium risk}& `r HR_m_stg1`  &  1\\
+& {High risk}& `r HR_h_stg1`  &  1.7 \\
+\hline
+\multirow{3}{6em}{Strategy 2}& {Low risk}& `r HR_l_stg2`  & 1 \\
+& {Medium risk}  & `r HR_m_stg2` &  1\\
+& {High risk}  &`r HR_h_stg2`  &  1.7\\
+\hline
+\multirow{3}{6em}{Strategy 3}& {Low risk}  & `r HR_l_stg3` & 1 \\
+& {Medium risk}  & `r HR_m_stg3` &  1\\
+& {High risk}  & `r HR_h_stg3` &  1.7\\
+\hline
+\multirow{3}{6em}{Intervention}& {Weight control}  & `r HR_wtc_cvd` &  `r HR_wtc_dth`\\
+& {Smoke cession}  & `r HR_smk_cvd` & `r HR_smk_cvdth` \\
+& {Salt reduction}  & `r HR_salt_cvd` & `r HR_salt_cvdth` \\
+\hline
+Medication & Statin and antihypertensive & `r HR_hpt_lip_cvd` &  `r HR_hpt_lip_cvdth` \\
+\hline
+\end{tabular}
+\end{table}
+\end{center}
+
+# Strategy 1
+
+```{r}
+p_live_cvd_l <- ProbFactor(p_live_cvd,HR_l_stg1)
+p_live_cvd_m <- ProbFactor(p_live_cvd,HR_m_stg1*
+                             HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)  # lifestyle intervention
+p_live_cvd_h <- ProbFactor(p_live_cvd,HR_h_stg1*
+                             HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth*    # lifestyle intervention
+                             HR_hpt_lip_cvdth)   # treatment intervention 
+
+# transition probability to death
+p_live_cvdth_l <- ProbFactor(p_live_cvdth,1)    # equal
+p_live_cvdth_m <- ProbFactor(p_live_cvdth,1*
+                               HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)  # lifestyle intervention 
+p_live_cvdth_h <- ProbFactor(p_live_cvdth,1.7*
+                               HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth* # lifestyle intervention
+                               HR_hpt_lip_cvdth) # treatment intervention 
 ```
 
-\textcolor{red}{Under strategy0 (no screening), `r result_strategy0` is the number of patients transitioned from S1 to S2.}
+```{r}
+risk_levels <- c("low","medium","high")
+result_CVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
+                         dimnames = list(patient_group_name, risk_levels))
+p_live_cvd_lmh <- matrix(cbind(p_live_cvd_l,p_live_cvd_m,p_live_cvd_h), ncol=3,
+                         dimnames = list(patient_group_name,risk_levels))
+p_live_cvdth_lmh <- matrix(cbind(p_live_cvdth_l,p_live_cvdth_m,p_live_cvdth_h), ncol=3,
+                           dimnames = list(patient_group_name,risk_levels))
+for(r in 1:3){  # three rish groups
+  for(i in 1:14){
+  if(i != 7 && i != 14){
+    a_P <- array(0, dim = c(n_states, n_states, 10),
+               dimnames = list(v_names_states, v_names_states, 1:10))
+    a_P["S1", "S1", 1:5] <- 1-(p_live_cvd_lmh[i,r]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_lmh[i,r]*p_live_cvd_lmh[i,r]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+    a_P["S1", "S2", 1:5] <- p_live_cvd_lmh[i,r]*(1-p_acvd_cvdth[i])
+    a_P["S1", "S3", 1:5] <- p_live_cvdth_lmh[i,r]*p_live_cvd_lmh[i,r]*p_acvd_cvdth[i]
+    a_P["S1", "S4", 1:5] <- p_live_oth_death[i]
+    a_P["S2", "S1", 1:5] <- 0
+    a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+      (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+    a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+      p_ccvd_acvd[i]*p_acvd_cvdth[i]
+    a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+    a_P["S3", "S3", 1:5] <- 1
+    a_P["S4", "S4", 1:5] <- 1
 
+    a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_lmh[i+1]*(1-p_acvd_cvdth[i+1])+
+                             p_live_cvdth_lmh[i+1]*p_live_cvd_lmh[i+1]*p_acvd_cvdth[i+1]
+                             +p_live_oth_death[i+1])
+    a_P["S1", "S2", 6:10] <- p_live_cvd_lmh[i+1]*(1-p_acvd_cvdth[i+1])
+    a_P["S1", "S3", 6:10] <- p_live_cvdth_lmh[i+1]*p_live_cvd_lmh[i+1]*p_acvd_cvdth[i+1]
+    a_P["S1", "S4", 6:10] <- p_live_oth_death[i+1]
+    a_P["S2", "S1", 6:10] <- 0
+    a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+       (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+    a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+    a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+    a_P["S3", "S3", 6:10] <- 1
+    a_P["S4", "S4", 6:10] <- 1
+  
+    v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+    m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+                  dimnames = list(0:(n_t-1), v_names_states))
+    m_M[1, ] <- v_s_init
+    for(t in 1:9){
+      m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+    }
+    result_m_M[,,i] <- m_M
+  }
+    if(i == 7 | i == 14){
+    a_P <- array(0, dim = c(n_states, n_states, 10),
+               dimnames = list(v_names_states, v_names_states, 1:10))
+    a_P["S1", "S1", 1:10] <- 1-(p_live_cvd[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+    a_P["S1", "S2", 1:10] <- p_live_cvd[i]*(1-p_acvd_cvdth[i])
+    a_P["S1", "S3", 1:10] <- p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i]
+    a_P["S1", "S4", 1:10] <- p_live_oth_death[i]
+    a_P["S2", "S1", 1:10] <- 0
+    a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[i]-
+      (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+    a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[i]+
+      p_ccvd_acvd[i]*p_acvd_cvdth[i]
+    a_P["S2", "S4", 1:10] <- p_live_oth_death[i]
+    a_P["S3", "S3", 1:10] <- 1
+    a_P["S4", "S4", 1:10] <- 1
+    
+    v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+    m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+                  dimnames = list(0:(n_t-1), v_names_states))
+    m_M[1, ] <- v_s_init
+    for(t in 1:9){
+      m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+    }
+    result_m_M[,,i] <- m_M
+  }
+}
+
+prob_group1 <- matrix(0, ncol=14, nrow=10,
+                     dimnames=list(paste0("t",0:9),patient_group_name))
+for (i in 1:14){
+  prob_group1[,i] <- result_m_M[, 1, i]* p_live_cvd_lmh[i,r]
+}
+patient_group <- matrix(cbind(population_data[1:14,]$low,
+                              population_data[1:14,]$medium,
+                              population_data[1:14,]$high),
+       ncol = 3, nrow=14,dimnames = list(patient_group_name,risk_levels))
+for(j in 1:14){
+  result_CVD_lmh[j,r] <- sum(prob_group1[,j]*patient_group[j,r]) 
+} 
+}
+```
+
+
+```{r results="asis"}
+print(xtable((rbind(result_CVD_lmh, "sum" = colSums(result_CVD_lmh))),
+      caption = "CVD events for patients under Strategy1"),
+      caption.placement="top",comment=FALSE)
+result_CVD_stg1 <- sum(result_CVD_lmh)
+result_CVD_stg1
+```
+
+
+
+
+# Strategy 2
+
+
+```{r}
+p_live_cvd_l <- ProbFactor(p_live_cvd,HR_l_stg2)
+p_live_cvd_m <- ProbFactor(p_live_cvd,HR_m_stg2*
+                             HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)  # lifestyle intervention
+p_live_cvd_h <- ProbFactor(p_live_cvd,HR_h_stg2*
+                             HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth*    # lifestyle intervention
+                             HR_hpt_lip_cvdth)   # treatment intervention 
+
+# transition probability to death
+p_live_cvdth_l <- ProbFactor(p_live_cvdth,1)    # equal
+p_live_cvdth_m <- ProbFactor(p_live_cvdth,1*
+                               HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)  # lifestyle intervention 
+p_live_cvdth_h <- ProbFactor(p_live_cvdth,1.7*
+                               HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth* # lifestyle intervention
+                               HR_hpt_lip_cvdth) # treatment intervention 
+```
+
+```{r}
+risk_levels <- c("low","medium","high")
+result_CVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
+                         dimnames = list(patient_group_name, risk_levels))
+p_live_cvd_lmh <- matrix(cbind(p_live_cvd_l,p_live_cvd_m,p_live_cvd_h), ncol=3,
+                         dimnames = list(patient_group_name,risk_levels))
+p_live_cvdth_lmh <- matrix(cbind(p_live_cvdth_l,p_live_cvdth_m,p_live_cvdth_h), ncol=3,
+                           dimnames = list(patient_group_name,risk_levels))
+for(r in 1:3){  # three rish groups
+  for(i in 1:14){
+  if(i != 7 && i != 14){
+    a_P <- array(0, dim = c(n_states, n_states, 10),
+               dimnames = list(v_names_states, v_names_states, 1:10))
+    a_P["S1", "S1", 1:5] <- 1-(p_live_cvd_lmh[i,r]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_lmh[i,r]*p_live_cvd_lmh[i,r]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+    a_P["S1", "S2", 1:5] <- p_live_cvd_lmh[i,r]*(1-p_acvd_cvdth[i])
+    a_P["S1", "S3", 1:5] <- p_live_cvdth_lmh[i,r]*p_live_cvd_lmh[i,r]*p_acvd_cvdth[i]
+    a_P["S1", "S4", 1:5] <- p_live_oth_death[i]
+    a_P["S2", "S1", 1:5] <- 0
+    a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+      (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+    a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+      p_ccvd_acvd[i]*p_acvd_cvdth[i]
+    a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+    a_P["S3", "S3", 1:5] <- 1
+    a_P["S4", "S4", 1:5] <- 1
+
+    a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_lmh[i+1]*(1-p_acvd_cvdth[i+1])+
+                             p_live_cvdth_lmh[i+1]*p_live_cvd_lmh[i+1]*p_acvd_cvdth[i+1]
+                             +p_live_oth_death[i+1])
+    a_P["S1", "S2", 6:10] <- p_live_cvd_lmh[i+1]*(1-p_acvd_cvdth[i+1])
+    a_P["S1", "S3", 6:10] <- p_live_cvdth_lmh[i+1]*p_live_cvd_lmh[i+1]*p_acvd_cvdth[i+1]
+    a_P["S1", "S4", 6:10] <- p_live_oth_death[i+1]
+    a_P["S2", "S1", 6:10] <- 0
+    a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+       (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+    a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+    a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+    a_P["S3", "S3", 6:10] <- 1
+    a_P["S4", "S4", 6:10] <- 1
+  
+    v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+    m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+                  dimnames = list(0:(n_t-1), v_names_states))
+    m_M[1, ] <- v_s_init
+    for(t in 1:9){
+      m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+    }
+    result_m_M[,,i] <- m_M
+  }
+    if(i == 7 | i == 14){
+    a_P <- array(0, dim = c(n_states, n_states, 10),
+               dimnames = list(v_names_states, v_names_states, 1:10))
+    a_P["S1", "S1", 1:10] <- 1-(p_live_cvd[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+    a_P["S1", "S2", 1:10] <- p_live_cvd[i]*(1-p_acvd_cvdth[i])
+    a_P["S1", "S3", 1:10] <- p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i]
+    a_P["S1", "S4", 1:10] <- p_live_oth_death[i]
+    a_P["S2", "S1", 1:10] <- 0
+    a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[i]-
+      (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+    a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[i]+
+      p_ccvd_acvd[i]*p_acvd_cvdth[i]
+    a_P["S2", "S4", 1:10] <- p_live_oth_death[i]
+    a_P["S3", "S3", 1:10] <- 1
+    a_P["S4", "S4", 1:10] <- 1
+    
+    v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+    m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+                  dimnames = list(0:(n_t-1), v_names_states))
+    m_M[1, ] <- v_s_init
+    for(t in 1:9){
+      m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+    }
+    result_m_M[,,i] <- m_M
+  }
+}
+
+prob_group2 <- matrix(0, ncol=14, nrow=10,
+                     dimnames=list(paste0("t",0:9),patient_group_name))
+for (i in 1:14){
+  prob_group2[,i] <- result_m_M[, 1, i]* p_live_cvd_lmh[i,r]
+}
+patient_group <- matrix(cbind(population_data[15:28,]$low,
+                              population_data[15:28,]$medium,
+                              population_data[15:28,]$high),
+       ncol = 3, nrow=14,dimnames = list(patient_group_name,risk_levels))
+result_CVD <- matrix(NA)
+for(j in 1:14){
+  result_CVD_lmh[j,r] <- sum(prob_group2[,j]*patient_group[j,r])
+} 
+}
+```
+
+
+```{r results="asis"}
+print(xtable((rbind(result_CVD_lmh, "sum" = colSums(result_CVD_lmh))),
+      caption = "CVD events for patients under Strategy2"),
+      caption.placement="top",comment=FALSE)
+result_CVD_stg2 <- sum(result_CVD_lmh)
+result_CVD_stg2
+```
+
+# Strategy 3
+
+```{r}
+p_live_cvd_l <- ProbFactor(p_live_cvd,HR_l_stg3)
+p_live_cvd_m <- ProbFactor(p_live_cvd,HR_m_stg3*
+                             HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)  # lifestyle intervention
+p_live_cvd_h <- ProbFactor(p_live_cvd,HR_h_stg3*
+                             HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth*    # lifestyle intervention
+                             HR_hpt_lip_cvdth)   # treatment intervention 
+
+# transition probability to death
+p_live_cvdth_l <- ProbFactor(p_live_cvdth,1)    # equal
+p_live_cvdth_m <- ProbFactor(p_live_cvdth,1*
+                               HR_smk_cvd*HR_salt_cvd*HR_wtc_cvd)  # lifestyle intervention 
+p_live_cvdth_h <- ProbFactor(p_live_cvdth,1.7*
+                               HR_smk_cvdth*HR_salt_cvdth*HR_wtc_dth* # lifestyle intervention
+                               HR_hpt_lip_cvdth) # treatment intervention 
+```
+
+
+```{r}
+risk_levels <- c("low","medium","high")
+result_CVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
+                         dimnames = list(patient_group_name, risk_levels))
+p_live_cvd_lmh <- matrix(cbind(p_live_cvd_l,p_live_cvd_m,p_live_cvd_h), ncol=3,
+                         dimnames = list(patient_group_name,risk_levels))
+p_live_cvdth_lmh <- matrix(cbind(p_live_cvdth_l,p_live_cvdth_m,p_live_cvdth_h), ncol=3,
+                           dimnames = list(patient_group_name,risk_levels))
+for(r in 1:3){  # three rish groups
+  for(i in 1:14){
+  if(i != 7 && i != 14){
+    a_P <- array(0, dim = c(n_states, n_states, 10),
+               dimnames = list(v_names_states, v_names_states, 1:10))
+    a_P["S1", "S1", 1:5] <- 1-(p_live_cvd_lmh[i,r]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth_lmh[i,r]*p_live_cvd_lmh[i,r]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+    a_P["S1", "S2", 1:5] <- p_live_cvd_lmh[i,r]*(1-p_acvd_cvdth[i])
+    a_P["S1", "S3", 1:5] <- p_live_cvdth_lmh[i,r]*p_live_cvd_lmh[i,r]*p_acvd_cvdth[i]
+    a_P["S1", "S4", 1:5] <- p_live_oth_death[i]
+    a_P["S2", "S1", 1:5] <- 0
+    a_P["S2", "S2", 1:5] <- 1-p_live_oth_death[i]-
+      (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+    a_P["S2", "S3", 1:5] <- p_ccvd_cvdth[i]+
+      p_ccvd_acvd[i]*p_acvd_cvdth[i]
+    a_P["S2", "S4", 1:5] <- p_live_oth_death[i]
+    a_P["S3", "S3", 1:5] <- 1
+    a_P["S4", "S4", 1:5] <- 1
+
+    a_P["S1", "S1", 6:10] <-  1-(p_live_cvd_lmh[i+1]*(1-p_acvd_cvdth[i+1])+
+                             p_live_cvdth_lmh[i+1]*p_live_cvd_lmh[i+1]*p_acvd_cvdth[i+1]
+                             +p_live_oth_death[i+1])
+    a_P["S1", "S2", 6:10] <- p_live_cvd_lmh[i+1]*(1-p_acvd_cvdth[i+1])
+    a_P["S1", "S3", 6:10] <- p_live_cvdth_lmh[i+1]*p_live_cvd_lmh[i+1]*p_acvd_cvdth[i+1]
+    a_P["S1", "S4", 6:10] <- p_live_oth_death[i+1]
+    a_P["S2", "S1", 6:10] <- 0
+    a_P["S2", "S2", 6:10] <- 1-p_live_oth_death[i+1]-
+       (p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1])
+    a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[i+1]+p_ccvd_acvd[i+1]*p_acvd_cvdth[i+1]
+    a_P["S2", "S4", 6:10] <-  p_live_oth_death[i+1]
+    a_P["S3", "S3", 6:10] <- 1
+    a_P["S4", "S4", 6:10] <- 1
+  
+    v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+    m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+                  dimnames = list(0:(n_t-1), v_names_states))
+    m_M[1, ] <- v_s_init
+    for(t in 1:9){
+      m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+    }
+    result_m_M[,,i] <- m_M
+  }
+    if(i == 7 | i == 14){
+    a_P <- array(0, dim = c(n_states, n_states, 10),
+               dimnames = list(v_names_states, v_names_states, 1:10))
+    a_P["S1", "S1", 1:10] <- 1-(p_live_cvd[i]*(1-p_acvd_cvdth[i]) +
+                               p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i] +
+                               p_live_oth_death[i])
+    a_P["S1", "S2", 1:10] <- p_live_cvd[i]*(1-p_acvd_cvdth[i])
+    a_P["S1", "S3", 1:10] <- p_live_cvdth[i]*p_live_cvd[i]*p_acvd_cvdth[i]
+    a_P["S1", "S4", 1:10] <- p_live_oth_death[i]
+    a_P["S2", "S1", 1:10] <- 0
+    a_P["S2", "S2", 1:10] <- 1-p_live_oth_death[i]-
+      (p_ccvd_cvdth[i]+p_ccvd_acvd[i]*p_acvd_cvdth[i])
+    a_P["S2", "S3", 1:10] <- p_ccvd_cvdth[i]+
+      p_ccvd_acvd[i]*p_acvd_cvdth[i]
+    a_P["S2", "S4", 1:10] <- p_live_oth_death[i]
+    a_P["S3", "S3", 1:10] <- 1
+    a_P["S4", "S4", 1:10] <- 1
+    
+    v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+    m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
+                  dimnames = list(0:(n_t-1), v_names_states))
+    m_M[1, ] <- v_s_init
+    for(t in 1:9){
+      m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+    }
+    result_m_M[,,i] <- m_M
+  }
+}
+
+prob_group3 <- matrix(0, ncol=14, nrow=10,
+                     dimnames=list(paste0("t",0:9),patient_group_name))
+for (i in 1:14){
+  prob_group3[,i] <- result_m_M[, 1, i]* p_live_cvd_lmh[i,r]
+}
+
+patient_group <- matrix(cbind(population_data[29:42,]$low,
+                              population_data[29:42,]$medium,
+                              population_data[29:42,]$high),
+       ncol = 3, nrow=14,dimnames = list(patient_group_name,risk_levels))
+result_CVD <- matrix(NA)
+for(j in 1:14){
+  result_CVD_lmh[j,r] <- sum(prob_group3[,j]*patient_group[j,r])
+} 
+}
+```
+
+```{r, results="asis"}
+print(xtable((rbind(result_CVD_lmh, "sum" = colSums(result_CVD_lmh))),
+      caption = "CVD events for patients under Strategy3"),
+      caption.placement="top",comment=FALSE)
+result_CVD_stg3 <- sum(result_CVD_lmh)
+result_CVD_stg3
+```
+
+# Conclusion
+
+```{r results="asis"}
+print(xtable((matrix(cbind(result_CVD_stg0,result_CVD_stg1,
+      result_CVD_stg2,result_CVD_stg3),nrow = 1, ncol = 4,
+      dimnames = list("",v_names_str))),
+      caption = "CVD events for patients under 3 strategies"),
+      caption.placement="top",comment=FALSE)
+
+```
 
